2023-01-10  Oliver Kiddle  <opk@zsh.org>

	* 51281: Src/Zle/zle_main.c, Src/Zle/zle_refresh.c, Src/zsh.h:
	keep track of attributes left on at the end of left and right
	prompts and reapply them explicitly as appropriate

	* 51280: Doc/Zsh/zle.yo, Src/Zle/zle_refresh.c, Src/init.c,
	Src/prompt.c, Src/zsh.h: add support for italic and faint
	fonts in the line editor

	* 51258, 51272: Src/Modules/watch.c, Src/Zle/complist.c,
	Src/Zle/zle.h, Src/Zle/zle_main.c, Src/Zle/zle_refresh.c,
	Src/Zle/zle_tricky.c, Src/Zle/zle_utils.c, Src/builtin.c,
	Src/init.c, Src/input.c, Src/loop.c, Src/prompt.c,
	Src/subst.c, Src/utils.c, Src/zsh.h, Test/D01prompt.ztst,
	Test/X04zlehighlight.ztst: refactor handling of terminal
	attributes, removing OFF flags in zattr

	* Nathan Houghton: 51276: Completion/Unix/Type/_diff_options:
	Fix diff completion for non GNU / FreeBSD platforms

2023-01-08  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Src/Zle/zle_refresh.c: In a comment, replace a C
	variables glob pattern with its matches, for greppability.

2023-01-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (cf. users/28616):
	Completion/Unix/Command/_subversion: _svnadmin: Add comment
	noting a case that's not completed correctly.

2022-12-31  Oliver Kiddle  <opk@zsh.org>

	* Max Coplan: 51263: Doc/Zsh/files.yo: fix typo, an -> a

	* Shohei YOSHIDA: 51255: Completion/Unix/Command/_ruby:
	Update erb completion for version 4.0.2

	* Shohei YOSHIDA: 51254: Completion/Unix/Command/_ruby:
	Add irb completion for version 1.6.2

	* Shohei YOSHIDA: 51253: Completion/Unix/Command/_ruby:
	Update ruby completion for version 3.2.0

	* Shohei YOSHIDA: 51233: Completion/Unix/Command/_gcc:
	Update sanitizer list to GCC 12

2022-12-30  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Daniel: 51249: Completion/Unix/Command/_tar: copy
	--force-local option as needed for file names.

2022-12-16  Oliver Kiddle  <opk@zsh.org>

	* 51214: Doc/Zsh/builtins.yo, Src/builtin.c, Test/B04read.ztst,